--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="dancing-script">Aspiring Professional Seeking Opportunities</p>
   </header>
   <section id="about" class="about">
-    <img src="image/IMG_20240613_232309_954.JPG" alt="Anita Masoomipour" class="img">
+    <img src="IMG_20240613_232309_954.JPG" alt="Anita Masoomipour" class="img">
     <div class="text">
       <h2>About Me</h2>
       <p>Hello! I am Anita Masoomipour, an enthusiastic and dedicated professional passionate about advancing my career. I am eager to apply my knowledge and skills in the fields of programming, web design, and full-stack development, aiming to create meaningful contributions in both academic and professional spheres.</p>
@@ -74,4 +74,5 @@
   </footer>
 </body>
 </html>
+
 
